--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -20,7 +20,7 @@
     <Button
         android:id="@+id/logButton"
         android:layout_width="160dp"
-        android:layout_height="wrap_content"
+        android:layout_height="52dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
@@ -38,7 +38,7 @@
     <Button
         android:id="@+id/regButton"
         android:layout_width="160dp"
-        android:layout_height="wrap_content"
+        android:layout_height="52dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="60dp"
         android:layout_marginRight="60dp"
