--- a/app/src/main/res/layout/activity_shelter_list.xml
+++ b/app/src/main/res/layout/activity_shelter_list.xml
@@ -32,6 +32,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/course_list_recycler"
+        android:paddingTop="?attr/actionBarSize"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
