--- a/app/src/main/res/layout/content_shelter_detail.xml
+++ b/app/src/main/res/layout/content_shelter_detail.xml
@@ -8,4 +8,109 @@
     tools:context="edu.gatech.cs2340.hkskh.Shelters.Controllers.ShelterDetailActivity"
     tools:showIn="@layout/activity_shelter_detail">
 
+    <TextView
+        android:id="@+id/shelter_detail_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.016" />
+
+    <TextView
+        android:id="@+id/shelter_detail_capacity"
+        android:layout_width="366dp"
+        android:layout_height="23dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.025"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/shelter_detail_name"
+        app:layout_constraintVertical_bias="0.026" />
+
+    <TextView
+        android:id="@+id/shelter_detail_gender"
+        android:layout_width="365dp"
+        android:layout_height="21dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="16dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/shelter_detail_capacity"
+        app:layout_constraintTop_toBottomOf="@+id/shelter_detail_capacity"
+        app:layout_constraintVertical_bias="0.024" />
+
+    <TextView
+        android:id="@+id/shelter_detail_longitude"
+        android:layout_width="365dp"
+        android:layout_height="19dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="24dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/shelter_detail_gender"
+        app:layout_constraintTop_toBottomOf="@+id/shelter_detail_gender"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+        android:id="@+id/shelter_detail_latitude"
+        android:layout_width="367dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/shelter_detail_longitude"
+        app:layout_constraintTop_toBottomOf="@+id/shelter_detail_longitude"
+        app:layout_constraintVertical_bias="0.071" />
+
+    <TextView
+        android:id="@+id/shelter_detail_address"
+        android:layout_width="365dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/shelter_detail_latitude"
+        app:layout_constraintTop_toBottomOf="@+id/shelter_detail_latitude"
+        app:layout_constraintVertical_bias="0.073" />
+
+    <TextView
+        android:id="@+id/shelter_detail_phone"
+        android:layout_width="366dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/shelter_detail_address"
+        app:layout_constraintTop_toBottomOf="@+id/shelter_detail_address"
+        app:layout_constraintVertical_bias="0.084" />
 </android.support.constraint.ConstraintLayout>
