The MainActivity shows the name of the logged in user, and information regarding the shelters they have checked into

--- a/app/src/main/res/layout/content_shelter_list.xml
+++ b/app/src/main/res/layout/content_shelter_list.xml
@@ -6,9 +6,19 @@
 
 
     <TextView
+        android:id="@+id/shelter_list_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="4dp"
+        android:layout_weight="1"
+        android:text="TextView"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+    <TextView
         android:id="@+id/shelter_list_item"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:paddingBottom="8dp"
         android:paddingTop="8dp"
