--- a/app/src/main/res/layout/filtered_recycler_layout.xml
+++ b/app/src/main/res/layout/filtered_recycler_layout.xml
@@ -5,6 +5,16 @@
     android:orientation="horizontal">
 
     <TextView
+        android:id="@+id/filtered_recycler_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="4dp"
+        android:layout_weight="1"
+        android:text="TextView"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+    <TextView
         android:id="@+id/filtered_recycler_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
